--- a/www/apps/api-reference/specs/store/paths/store_shipping-options_{id}_calculate.yaml
+++ b/www/apps/api-reference/specs/store/paths/store_shipping-options_{id}_calculate.yaml
@@ -1,7 +1,7 @@
 post:
   operationId: PostShippingOptionsIdCalculate
-  summary: Add Calculate to Shipping Option
-  description: Add a Calculate to a shipping option
+  summary: Calculate Shipping Option Price
+  description: Calculate the price of a shipping option in a cart.
   x-authenticated: false
   parameters:
     - name: id
@@ -12,10 +12,13 @@ post:
         type: string
     - name: fields
       in: query
-      description: |-
+      description: >-
         Comma-separated fields that should be included in the returned data.
-         * if a field is prefixed with `+` it will be added to the default fields, using `-` will remove it from the default fields.
-         * without prefix it will replace the entire default fields.
+
+        if a field is prefixed with `+` it will be added to the default fields,
+        using `-` will remove it from the default fields.
+
+        without prefix it will replace the entire default fields.
       required: false
       schema:
         type: string
@@ -32,17 +35,22 @@ post:
       application/json:
         schema:
           type: object
-          description: SUMMARY
+          description: The calculation's details.
           required:
             - cart_id
           properties:
             cart_id:
               type: string
               title: cart_id
-              description: The shipping option's cart id.
+              description: The ID of the cart the shipping option is used in.
             data:
               type: object
-              description: The shipping option's data.
+              description: >-
+                Custom data that's useful for the fulfillment provider to
+                calculate the price.
+              externalDocs:
+                url: >-
+                  https://docs.medusajs.com/resources/commerce-modules/fulfillment/shipping-option#data-property
   x-codeSamples:
     - lang: Shell
       label: cURL
