--- a/www/apps/api-reference/specs/store/components/schemas/AdminShippingOptionPriceRule.yaml
+++ b/www/apps/api-reference/specs/store/components/schemas/AdminShippingOptionPriceRule.yaml
@@ -17,13 +17,8 @@ properties:
     title: id
     description: The price rule's ID.
   value:
-    oneOf:
-      - type: string
-        title: value
-        description: The price rule's value.
-      - type: number
-        title: value
-        description: The price rule's value.
+    type: string
+    title: value
     description: The price rule's value.
   operator:
     type: string
