--- a/www/apps/api-reference/specs/store/components/schemas/StoreShippingOptionResponse.yaml
+++ b/www/apps/api-reference/specs/store/components/schemas/StoreShippingOptionResponse.yaml
@@ -1,5 +1,5 @@
 type: object
-description: SUMMARY
+description: The shipping option's details.
 x-schemaName: StoreShippingOptionResponse
 required:
   - shipping_option
