--- a/packages/modules/fulfillment/package.json
+++ b/packages/modules/fulfillment/package.json
@@ -29,7 +29,7 @@
     "resolve:aliases": "tsc --showConfig -p tsconfig.json > tsconfig.resolved.json && tsc-alias -p tsconfig.resolved.json && rimraf tsconfig.resolved.json",
     "build": "rimraf dist && tsc --build && npm run resolve:aliases",
     "test": "jest --runInBand --bail --forceExit --passWithNoTests -- src",
-    "test:integration": "jest --forceExit -- integration-tests/__tests__/fulfillment-module-service/shipping-option.spec.ts",
+    "test:integration": "jest --forceExit -- integration-tests/**/__tests__/**/*.spec.ts",
     "migration:initial": " MIKRO_ORM_CLI=./mikro-orm.config.dev.ts medusa-mikro-orm migration:create --initial -n InitialSetupMigration",
     "migration:create": " MIKRO_ORM_CLI=./mikro-orm.config.dev.ts medusa-mikro-orm migration:create",
     "migration:up": " MIKRO_ORM_CLI=./mikro-orm.config.dev.ts medusa-mikro-orm migration:up",
