--- a/www/apps/resources/package.json
+++ b/www/apps/resources/package.json
@@ -43,7 +43,8 @@
     "ts-node": "^10.9.2",
     "tsconfig": "*",
     "types": "*",
-    "typescript": "^5"
+    "typescript": "^5",
+    "utils": "*"
   },
   "engines": {
     "node": ">=20"
