--- a/www/packages/build-scripts/package.json
+++ b/www/packages/build-scripts/package.json
@@ -24,7 +24,8 @@
   ],
   "scripts": {
     "build": "yarn clean && tsc",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "watch": "tsc --watch"
   },
   "dependencies": {
     "remark-rehype-plugins": "*"
@@ -34,7 +35,8 @@
     "rimraf": "^5.0.5",
     "tsconfig": "*",
     "types": "*",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "utils": "*"
   },
   "engines": {
     "node": ">=18.17.0"
