--- a/www/packages/tags/package.json
+++ b/www/packages/tags/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "remark-rehype-plugins",
+  "name": "tags",
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
@@ -28,20 +28,10 @@
     "watch": "tsc --watch"
   },
   "dependencies": {
-    "@cloudinary/url-gen": "^1.17.0",
-    "remark-frontmatter": "^5.0.0",
-    "remark-parse": "^11.0.0",
-    "remark-stringify": "^11.0.0",
-    "to-vfile": "^8.0.0",
-    "unified": "^11.0.4",
-    "unist-builder": "3.0.0",
-    "unist-util-visit": "4.1.2",
-    "utils": "*",
-    "vfile-matter": "^5.0.0"
+    "utils": "*"
   },
   "devDependencies": {
     "@types/node": "^20.11.20",
-    "docs-ui": "*",
     "rimraf": "^5.0.5",
     "tsconfig": "*",
     "types": "*",
