--- a/www/apps/resources/package.json
+++ b/www/apps/resources/package.json
@@ -27,6 +27,7 @@
     "remark-frontmatter": "^5.0.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^15.1.1",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20",
     "@types/react": "npm:types-react@rc",
