--- a/www/packages/build-scripts/package.json
+++ b/www/packages/build-scripts/package.json
@@ -32,11 +32,11 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.20",
+    "docs-utils": "*",
     "rimraf": "^5.0.5",
     "tsconfig": "*",
     "types": "*",
-    "typescript": "^5.3.3",
-    "utils": "*"
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.17.0"
