--- a/www/apps/resources/package.json
+++ b/www/apps/resources/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "npm:types-react@rc",
     "autoprefixer": "^10.0.1",
     "build-scripts": "*",
+    "docs-utils": "*",
     "eslint": "^9.13.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -45,8 +46,7 @@
     "ts-node": "^10.9.2",
     "tsconfig": "*",
     "types": "*",
-    "typescript": "^5",
-    "utils": "*"
+    "typescript": "^5"
   },
   "engines": {
     "node": ">=20"
