--- a/www/packages/remark-rehype-plugins/package.json
+++ b/www/packages/remark-rehype-plugins/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@cloudinary/url-gen": "^1.17.0",
+    "docs-utils": "*",
     "remark-frontmatter": "^5.0.0",
     "remark-parse": "^11.0.0",
     "remark-stringify": "^11.0.0",
@@ -36,7 +37,6 @@
     "unified": "^11.0.4",
     "unist-builder": "3.0.0",
     "unist-util-visit": "4.1.2",
-    "utils": "*",
     "vfile-matter": "^5.0.0"
   },
   "devDependencies": {
