--- a/www/packages/tags/package.json
+++ b/www/packages/tags/package.json
@@ -29,7 +29,7 @@
     "watch": "tsc --watch"
   },
   "dependencies": {
-    "utils": "*"
+    "docs-utils": "*"
   },
   "devDependencies": {
     "@types/node": "^20.11.20",
