docs: support generating sidebar items with tags

--- a/www/packages/build-scripts/package.json
+++ b/www/packages/build-scripts/package.json
@@ -28,7 +28,8 @@
     "watch": "tsc --watch"
   },
   "dependencies": {
-    "remark-rehype-plugins": "*"
+    "remark-rehype-plugins": "*",
+    "tags": "*"
   },
   "devDependencies": {
     "@types/node": "^20.11.20",
