--- a/www/apps/api-reference/specs/store/components/schemas/Order.yaml
+++ b/www/apps/api-reference/specs/store/components/schemas/Order.yaml
@@ -211,3 +211,8 @@ properties:
     type: number
     title: display_id
     description: The order's display ID.
+  credit_lines:
+    type: array
+    description: The order's credit lines.
+    items:
+      $ref: ./OrderCreditLine.yaml
