--- a/www/apps/api-reference/specs/admin/components/schemas/AdminFulfillmentProviderOption.yaml
+++ b/www/apps/api-reference/specs/admin/components/schemas/AdminFulfillmentProviderOption.yaml
@@ -1,5 +1,5 @@
 type: object
-description: The fulfillment option's fulfillment options.
+description: The fulfillment option's details.
 x-schemaName: AdminFulfillmentProviderOption
 required:
   - id
@@ -12,4 +12,4 @@ properties:
   is_return:
     type: boolean
     title: is_return
-    description: The fulfillment option's is return.
+    description: Whether the fulfillment option is used for returns.
