--- a/www/apps/api-reference/specs/admin/paths/admin_fulfillment-providers_{id}_options.yaml
+++ b/www/apps/api-reference/specs/admin/paths/admin_fulfillment-providers_{id}_options.yaml
@@ -1,9 +1,9 @@
 get:
   operationId: GetFulfillmentProvidersIdOptions
-  summary: List Options
+  summary: List Fulfillment Options
   description: >-
-    Retrieve a list of options in a fulfillment provider. The options can be
-    filtered by fields like FILTER FIELDS. The options can also be paginated.
+    Retrieve the list of fulfillment options of a fulfillment provider. These
+    options may be retrieved from an integrated third-party service.
   x-authenticated: true
   parameters:
     - name: id
