--- a/www/apps/api-reference/specs/admin/components/schemas/AdminFulfillmentProviderOptionsListResponse.yaml
+++ b/www/apps/api-reference/specs/admin/components/schemas/AdminFulfillmentProviderOptionsListResponse.yaml
@@ -1,5 +1,5 @@
 type: object
-description: SUMMARY
+description: The paginated list of fulfillment options.
 x-schemaName: AdminFulfillmentProviderOptionsListResponse
 required:
   - limit
@@ -10,17 +10,17 @@ properties:
   limit:
     type: number
     title: limit
-    description: The fulfillment provider's limit.
+    description: The maximum number of items returned.
   offset:
     type: number
     title: offset
-    description: The fulfillment provider's offset.
+    description: The number of items skipped before retrieving the returned items.
   count:
     type: number
     title: count
-    description: The fulfillment provider's count.
+    description: The total number of items.
   fulfillment_options:
     type: array
-    description: The fulfillment provider's fulfillment options.
+    description: The list of fulfillment options.
     items:
       $ref: ./AdminFulfillmentProviderOption.yaml
