--- a/www/apps/api-reference/specs/store/components/schemas/Order.yaml
+++ b/www/apps/api-reference/specs/store/components/schemas/Order.yaml
@@ -213,6 +213,8 @@ properties:
     description: The order's display ID.
   credit_lines:
     type: array
-    description: The order's credit lines.
+    description: >-
+      The order's credit lines, useful to add additional payment amounts for an
+      order.
     items:
       $ref: ./OrderCreditLine.yaml
