--- a/www/apps/api-reference/specs/store/components/schemas/OrderCreditLine.yaml
+++ b/www/apps/api-reference/specs/store/components/schemas/OrderCreditLine.yaml
@@ -1,5 +1,5 @@
 type: object
-description: The credit line's credit lines.
+description: The credit line's details.
 x-schemaName: OrderCreditLine
 required:
   - id
@@ -18,27 +18,29 @@ properties:
   order_id:
     type: string
     title: order_id
-    description: The credit line's order id.
+    description: The ID of the associated order.
   order:
-    $ref: ./Order.yaml
+    type: object
   reference:
     type: string
     title: reference
-    description: The credit line's reference.
+    description: >-
+      The table that this credit line references. For example,
+      `payment_collection`.
   reference_id:
     type: string
     title: reference_id
-    description: The credit line's reference id.
+    description: The ID of the record in the referenced table. For example, `paycol_123`.
   metadata:
     type: object
-    description: The credit line's metadata.
+    description: The credit line's metadata, can hold custom key-value pairs.
   created_at:
     type: string
     format: date-time
     title: created_at
-    description: The credit line's created at.
+    description: The date the credit line was created.
   updated_at:
     type: string
     format: date-time
     title: updated_at
-    description: The credit line's updated at.
+    description: The date the credit line was updated.
