--- a/packages/admin/admin-bundler/package.json
+++ b/packages/admin/admin-bundler/package.json
@@ -18,7 +18,7 @@
     "package.json"
   ],
   "devDependencies": {
-    "@medusajs/types": "^2.1.3",
+    "@medusajs/types": "2.1.3",
     "@types/compression": "^1.7.5",
     "copyfiles": "^2.4.1",
     "express": "^4.21.0",
