--- a/packages/admin/admin-sdk/package.json
+++ b/packages/admin/admin-sdk/package.json
@@ -25,7 +25,7 @@
     "zod": "^3.22"
   },
   "dependencies": {
-    "@medusajs/admin-shared": "^2.1.3"
+    "@medusajs/admin-shared": "2.1.3"
   },
   "peerDependencies": {
     "zod": "^3.22"
