--- a/packages/cli/create-medusa-app/package.json
+++ b/packages/cli/create-medusa-app/package.json
@@ -13,7 +13,7 @@
     "watch": "tsc --watch"
   },
   "dependencies": {
-    "@medusajs/telemetry": "^2.1.3",
+    "@medusajs/telemetry": "2.1.3",
     "boxen": "^5",
     "chalk": "^5.2.0",
     "commander": "^10.0.1",
