--- a/packages/core/js-sdk/package.json
+++ b/packages/core/js-sdk/package.json
@@ -35,7 +35,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@medusajs/types": "^2.1.3",
+    "@medusajs/types": "2.1.3",
     "fetch-event-stream": "^0.1.5",
     "qs": "^6.12.1"
   },
