--- a/packages/core/modules-sdk/package.json
+++ b/packages/core/modules-sdk/package.json
@@ -45,9 +45,9 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@medusajs/orchestration": "^2.1.3",
-    "@medusajs/types": "^2.1.3",
-    "@medusajs/utils": "^2.1.3"
+    "@medusajs/orchestration": "2.1.3",
+    "@medusajs/types": "2.1.3",
+    "@medusajs/utils": "2.1.3"
   },
   "peerDependencies": {
     "@mikro-orm/core": "5.9.7",
