--- a/packages/core/orchestration/package.json
+++ b/packages/core/orchestration/package.json
@@ -39,8 +39,8 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@medusajs/types": "^2.1.3",
-    "@medusajs/utils": "^2.1.3"
+    "@medusajs/types": "2.1.3",
+    "@medusajs/utils": "2.1.3"
   },
   "peerDependencies": {
     "@mikro-orm/core": "5.9.7",
