--- a/packages/core/workflows-sdk/package.json
+++ b/packages/core/workflows-sdk/package.json
@@ -40,10 +40,10 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@medusajs/modules-sdk": "^2.1.3",
-    "@medusajs/orchestration": "^2.1.3",
-    "@medusajs/types": "^2.1.3",
-    "@medusajs/utils": "^2.1.3",
+    "@medusajs/modules-sdk": "2.1.3",
+    "@medusajs/orchestration": "2.1.3",
+    "@medusajs/types": "2.1.3",
+    "@medusajs/utils": "2.1.3",
     "ulid": "^2.3.0"
   },
   "peerDependencies": {
