--- a/packages/modules/api-key/package.json
+++ b/packages/modules/api-key/package.json
@@ -36,8 +36,8 @@
     "orm:cache:clear": " MIKRO_ORM_CLI=./mikro-orm.config.dev.ts medusa-mikro-orm cache:clear"
   },
   "devDependencies": {
-    "@medusajs/framework": "^2.1.3",
-    "@medusajs/test-utils": "^2.1.3",
+    "@medusajs/framework": "2.1.3",
+    "@medusajs/test-utils": "2.1.3",
     "@mikro-orm/cli": "5.9.7",
     "@swc/core": "^1.7.28",
     "@swc/jest": "^0.2.36",
