--- a/packages/modules/link-modules/package.json
+++ b/packages/modules/link-modules/package.json
@@ -33,8 +33,8 @@
     "test:integration": "jest --forceExit -- integration-tests/**/__tests__/**/*.ts"
   },
   "devDependencies": {
-    "@medusajs/framework": "^2.1.3",
-    "@medusajs/test-utils": "^2.1.3",
+    "@medusajs/framework": "2.1.3",
+    "@medusajs/test-utils": "2.1.3",
     "@mikro-orm/core": "5.9.7",
     "@mikro-orm/migrations": "5.9.7",
     "@mikro-orm/postgresql": "5.9.7",
