--- a/packages/modules/locking/package.json
+++ b/packages/modules/locking/package.json
@@ -32,8 +32,8 @@
     "orm:cache:clear": " MIKRO_ORM_CLI=./mikro-orm.config.dev.ts medusa-mikro-orm cache:clear"
   },
   "devDependencies": {
-    "@medusajs/framework": "^2.1.3",
-    "@medusajs/test-utils": "^2.1.3",
+    "@medusajs/framework": "2.1.3",
+    "@medusajs/test-utils": "2.1.3",
     "@mikro-orm/cli": "5.9.7",
     "@mikro-orm/core": "5.9.7",
     "@mikro-orm/migrations": "5.9.7",
