--- a/packages/modules/providers/file-s3/package.json
+++ b/packages/modules/providers/file-s3/package.json
@@ -26,7 +26,7 @@
     "watch": "tsc --watch"
   },
   "devDependencies": {
-    "@medusajs/framework": "^2.1.3",
+    "@medusajs/framework": "2.1.3",
     "@swc/core": "^1.7.28",
     "@swc/jest": "^0.2.36",
     "axios": "^1.6.8",
