--- a/packages/modules/providers/locking-postgres/package.json
+++ b/packages/modules/providers/locking-postgres/package.json
@@ -20,7 +20,7 @@
   "author": "Medusa",
   "license": "MIT",
   "devDependencies": {
-    "@medusajs/framework": "^2.1.3",
+    "@medusajs/framework": "2.1.3",
     "@mikro-orm/cli": "5.9.7",
     "@mikro-orm/core": "5.9.7",
     "@mikro-orm/migrations": "5.9.7",
