--- a/packages/modules/providers/locking-redis/package.json
+++ b/packages/modules/providers/locking-redis/package.json
@@ -20,7 +20,7 @@
   "author": "Medusa",
   "license": "MIT",
   "devDependencies": {
-    "@medusajs/framework": "^2.1.3",
+    "@medusajs/framework": "2.1.3",
     "@swc/core": "^1.7.28",
     "@swc/jest": "^0.2.36",
     "jest": "^29.7.0",
