--- a/packages/modules/stock-location/package.json
+++ b/packages/modules/stock-location/package.json
@@ -23,8 +23,8 @@
   "author": "Medusa",
   "license": "MIT",
   "devDependencies": {
-    "@medusajs/framework": "^2.1.3",
-    "@medusajs/test-utils": "^2.1.3",
+    "@medusajs/framework": "2.1.3",
+    "@medusajs/test-utils": "2.1.3",
     "@mikro-orm/cli": "5.9.7",
     "@mikro-orm/core": "5.9.7",
     "@mikro-orm/migrations": "5.9.7",
