--- a/packages/modules/providers/file-s3/package.json
+++ b/packages/modules/providers/file-s3/package.json
@@ -6,7 +6,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/medusajs/medusa",
-    "directory": "packages/file-s3"
+    "directory": "packages/modules/providers/file-s3"
   },
   "files": [
     "dist",
