--- a/www/apps/api-reference/specs/admin/components/schemas/AdminShippingOptionRule.yaml
+++ b/www/apps/api-reference/specs/admin/components/schemas/AdminShippingOptionRule.yaml
@@ -26,8 +26,16 @@ properties:
     description: The shipping option rule's operator.
     example: eq
   value:
-    type: string
-    title: value
+    oneOf:
+      - type: string
+        title: value
+        description: The rule's value.
+      - type: array
+        description: The rule's value.
+        items:
+          type: string
+          title: value
+          description: The value's details.
   shipping_option_id:
     type: string
     title: shipping_option_id
