--- a/www/apps/api-reference/specs/store/openapi.full.yaml
+++ b/www/apps/api-reference/specs/store/openapi.full.yaml
@@ -6373,6 +6373,68 @@ components:
           type: number
           title: apply_to_quantity
           description: The quantity that results from matching the `buyget` promotion's condition. For example, if the promotion is a "Buy 2 shirts get 1 free", the value of this attribute is `1`.
+    AdminBatchInventoryItemLocationsLevel:
+      type: object
+      description: The inventory levels to create or delete.
+      properties:
+        create:
+          type: array
+          description: The inventory levels to create.
+          items:
+            type: object
+            description: The inventory level's details.
+            required:
+              - location_id
+            properties:
+              location_id:
+                type: string
+                title: location_id
+                description: The ID of the associated location.
+              stocked_quantity:
+                type: number
+                title: stocked_quantity
+                description: The inventory level's stocked quantity.
+              incoming_quantity:
+                type: number
+                title: incoming_quantity
+                description: The inventory level's incoming quantity.
+        update:
+          type: array
+          description: The inventory levels to update.
+          items:
+            type: object
+            description: The inventory level's details.
+            properties:
+              stocked_quantity:
+                type: number
+                title: stocked_quantity
+                description: The inventory level's stocked quantity.
+              incoming_quantity:
+                type: number
+                title: incoming_quantity
+                description: The inventory level's incoming quantity.
+              location_id:
+                type: string
+                title: location_id
+                description: The update's location id.
+              id:
+                type: string
+                title: id
+                description: The update's ID.
+            required:
+              - location_id
+        delete:
+          type: array
+          description: The inventory levels to delete.
+          items:
+            type: string
+            title: delete
+            description: The ID of the inventory level to delete.
+        force:
+          type: boolean
+          title: force
+          description: The inventory item's force.
+      x-schemaName: AdminBatchInventoryItemLocationsLevel
     AdminBatchProductRequest:
       type: object
       description: The products to create, update, or delete.
@@ -10206,7 +10268,7 @@ components:
               description: The number of products that will be updated by this import.
     AdminInventoryItem:
       type: object
-      description: The reservation's inventory item.
+      description: The inventory item's inventory.
       x-schemaName: AdminInventoryItem
       required:
         - id
@@ -10215,65 +10277,65 @@ components:
         id:
           type: string
           title: id
-          description: The inventory item's ID.
+          description: The inventory's ID.
         sku:
           type: string
           title: sku
-          description: The inventory item's sku.
+          description: The inventory's sku.
         origin_country:
           type: string
           title: origin_country
-          description: The inventory item's origin country.
+          description: The inventory's origin country.
         hs_code:
           type: string
           title: hs_code
-          description: The inventory item's hs code.
+          description: The inventory's hs code.
         requires_shipping:
           type: boolean
           title: requires_shipping
-          description: The inventory item's requires shipping.
+          description: The inventory's requires shipping.
         mid_code:
           type: string
           title: mid_code
-          description: The inventory item's mid code.
+          description: The inventory's mid code.
         material:
           type: string
           title: material
-          description: The inventory item's material.
+          description: The inventory's material.
         weight:
           type: number
           title: weight
-          description: The inventory item's weight.
+          description: The inventory's weight.
         length:
           type: number
           title: length
-          description: The inventory item's length.
+          description: The inventory's length.
         height:
           type: number
           title: height
-          description: The inventory item's height.
+          description: The inventory's height.
         width:
           type: number
           title: width
-          description: The inventory item's width.
+          description: The inventory's width.
         title:
           type: string
           title: title
-          description: The inventory item's title.
+          description: The inventory's title.
         description:
           type: string
           title: description
-          description: The inventory item's description.
+          description: The inventory's description.
         thumbnail:
           type: string
           title: thumbnail
-          description: The inventory item's thumbnail.
+          description: The inventory's thumbnail.
         metadata:
           type: object
-          description: The inventory item's metadata.
+          description: The inventory's metadata.
         location_levels:
           type: array
-          description: The inventory item's location levels.
+          description: The inventory's location levels.
           items:
             $ref: '#/components/schemas/AdminInventoryLevel'
     AdminInventoryItemResponse:
@@ -12246,22 +12308,6 @@ components:
           type: string
           title: provider_id
           description: The ID of the payment provider used to process this payment.
-        cart_id:
-          type: string
-          title: cart_id
-          description: The ID of the associated cart.
-        order_id:
-          type: string
-          title: order_id
-          description: The ID of the associated order.
-        order_edit_id:
-          type: string
-          title: order_edit_id
-          description: The ID of the associated order edit.
-        customer_id:
-          type: string
-          title: customer_id
-          description: ID of the associated customer.
         data:
           type: object
           description: The payment's data, useful for processing by the payment provider.
@@ -12317,7 +12363,6 @@ components:
         - payment_providers
         - id
         - currency_code
-        - region_id
         - amount
         - status
       properties:
@@ -12329,10 +12374,6 @@ components:
           type: string
           title: currency_code
           description: The payment collection's currency code.
-        region_id:
-          type: string
-          title: region_id
-          description: The ID of the region this payment collection is associated with.
         amount:
           type: number
           title: amount
@@ -14461,6 +14502,11 @@ components:
         metadata:
           type: object
           description: The variant's metadata, can hold custom key-value pairs.
+        inventory_items:
+          type: array
+          description: The variant's inventory items.
+          items:
+            $ref: '#/components/schemas/AdminProductVariantInventoryItemLink'
     AdminProductVariantDeleteResponse:
       type: object
       description: The details of the product variant's deletion.
@@ -14593,6 +14639,31 @@ components:
                         type: string
                         title: inventory_item_id
                         description: The ID of the inventory item.
+    AdminProductVariantInventoryItemLink:
+      type: object
+      description: The inventory item's inventory items.
+      x-schemaName: AdminProductVariantInventoryItemLink
+      required:
+        - id
+        - variant_id
+        - inventory_item_id
+      properties:
+        id:
+          type: string
+          title: id
+          description: The inventory item's ID.
+        variant_id:
+          type: string
+          title: variant_id
+          description: The inventory item's variant id.
+        variant:
+          type: object
+        inventory_item_id:
+          type: string
+          title: inventory_item_id
+          description: The inventory item's inventory item id.
+        inventory:
+          $ref: '#/components/schemas/AdminInventoryItem'
     AdminProductVariantInventoryLink:
       type: object
       description: The details of an association between a product variant and an inventory item.
@@ -14710,6 +14781,13 @@ components:
           format: date-time
           title: deleted_at
           description: The date the promotion was deleted.
+        status:
+          type: string
+          description: The promotion's status.
+          enum:
+            - draft
+            - active
+            - inactive
     AdminPromotionResponse:
       type: object
       description: The promotion's details.
@@ -15762,8 +15840,16 @@ components:
           description: The shipping option rule's operator.
           example: eq
         value:
-          type: string
-          title: value
+          oneOf:
+            - type: string
+              title: value
+              description: The rule's value.
+            - type: array
+              description: The rule's value.
+              items:
+                type: string
+                title: value
+                description: The value's details.
         shipping_option_id:
           type: string
           title: shipping_option_id
@@ -19767,22 +19853,6 @@ components:
           type: string
           title: provider_id
           description: The ID of the payment provider used to process this payment.
-        cart_id:
-          type: string
-          title: cart_id
-          description: The ID of the associated cart.
-        order_id:
-          type: string
-          title: order_id
-          description: The ID of the associated order.
-        order_edit_id:
-          type: string
-          title: order_edit_id
-          description: The ID of the associated order edit.
-        customer_id:
-          type: string
-          title: customer_id
-          description: ID of the associated customer.
         data:
           type: object
           description: The payment's data, useful for processing by the payment provider.
@@ -19837,7 +19907,6 @@ components:
       required:
         - id
         - currency_code
-        - region_id
         - amount
         - status
         - payment_providers
@@ -19850,10 +19919,6 @@ components:
           type: string
           title: currency_code
           description: The payment collection's currency code.
-        region_id:
-          type: string
-          title: region_id
-          description: The ID of the region this payment collection is associated with.
         amount:
           type: number
           title: amount
@@ -30870,7 +30935,6 @@ components:
         - payment_providers
         - id
         - currency_code
-        - region_id
         - amount
         - status
       properties:
@@ -30882,10 +30946,6 @@ components:
           type: string
           title: currency_code
           description: The payment collection's currency code.
-        region_id:
-          type: string
-          title: region_id
-          description: The ID of the region this payment collection is associated with.
         amount:
           type: number
           title: amount
