--- a/packages/medusa/package.json
+++ b/packages/medusa/package.json
@@ -40,8 +40,8 @@
     "watch": "tsc --build --watch",
     "build": "rimraf dist && tsc --build",
     "serve": "node dist/app.js",
-    "test": "jest --silent=false --bail --maxWorkers=50% --forceExit",
-    "test:integration": "jest --forceExit"
+    "test": "jest --runInBand --bail --forceExit -- src/**/__tests__/**/*.ts",
+    "test:integration": "jest --forceExit -- src/**/integration-tests/**/__tests__/**/*.ts",
   },
   "devDependencies": {
     "@medusajs/framework": "^2.2.0",
